--- a/src/app/interfaz_selecion/Pagina_de_selecion.html
+++ b/src/app/interfaz_selecion/Pagina_de_selecion.html
@@ -16,7 +16,7 @@
    
   </div> 
   <div id="contenedor">
-    <div class="musicaCategoria"><a href="#">Musica <i class="bi bi-music-note-beamed"></i></a></div>
+    <div class="musicaCategoria" value="false"><a href="#" >Musica <i class="bi bi-music-note-beamed"></i></a></div>
     <div class="videoJuegoCategoria"><a href="#">Video juego <i class="bi bi-controller"></i></a></div>
     <div class="ArteCategoria"><a href="#">Arte <i class="bi bi-brush"></i></a></div>
     <div class="SeleccionDeCategoria"><a href="#" id="Elige">Elige tu categoria</a></div>
