feat:Desarrollo de endApp para su funcinamiento

--- a/src/app/endApp/endApp.html
+++ b/src/app/endApp/endApp.html
@@ -165,5 +165,7 @@
         </div >
         <div class="Principal"><p>Regresar</p></div>
     </div>
+    <script src="endApp.js"></script>
 </body>
 </html>
+
