--- a/src/app/sectionDeLaPregunta/Pregunta.html
+++ b/src/app/sectionDeLaPregunta/Pregunta.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -54,6 +54,6 @@
    
 
 
-<script src="../sectionDeLaPregunta/SelectPre.js"></script>
+<script type="module" src="../sectionDeLaPregunta/SelectPre.js"></script>
 </body>
 </html>
